deploy: b84a20803cb2e09f93c32ba6cecc75a16767a095

--- a/interfaces/ExplorerTab.html
+++ b/interfaces/ExplorerTab.html
@@ -411,6 +411,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
