--- a/interfaces/ExplorerTarget.html
+++ b/interfaces/ExplorerTarget.html
@@ -807,6 +807,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
