--- a/classes/ExplorerAction.html
+++ b/classes/ExplorerAction.html
@@ -199,7 +199,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:91</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:92</a></div>
                         </td>
                     </tr>
 
@@ -225,7 +225,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="93" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:93</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="94" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:94</a></div>
                         </td>
                     </tr>
 
@@ -251,7 +251,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:92</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="93" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:93</a></div>
                         </td>
                     </tr>
 
@@ -277,7 +277,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="95" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:95</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="96" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:96</a></div>
                         </td>
                     </tr>
 
@@ -303,7 +303,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="94" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:94</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="95" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:95</a></div>
                         </td>
                     </tr>
 
@@ -375,6 +375,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
