--- a/classes/ExplorerColumnRenderer.html
+++ b/classes/ExplorerColumnRenderer.html
@@ -199,7 +199,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="127" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:127</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="128" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:128</a></div>
                         </td>
                     </tr>
 
@@ -225,7 +225,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="129" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:129</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="130" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:130</a></div>
                         </td>
                     </tr>
 
@@ -251,7 +251,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="128" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:128</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="129" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:129</a></div>
                         </td>
                     </tr>
 
@@ -277,7 +277,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="131" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:131</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="132" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:132</a></div>
                         </td>
                     </tr>
 
@@ -303,7 +303,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="130" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:130</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="131" class="link-to-prism">lib/src/components/explorer/src/explorer.types.ts:131</a></div>
                         </td>
                     </tr>
 
@@ -375,6 +375,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
