--- a/interfaces/ExplorerColumn.html
+++ b/interfaces/ExplorerColumn.html
@@ -172,6 +172,12 @@
                                         </a>
                                 </li>
                                 <li>
+                                        <a href="#named" 
+>
+                                            named
+                                        </a>
+                                </li>
+                                <li>
                                         <a href="#objectEnabled" 
 >
                                             objectEnabled
@@ -412,6 +418,39 @@
                                     <tr>
                                         <td class="col-md-4">
                                             <i>Type : </i>        <code><a href="../interfaces/LocalizedString.html" target="_self" >LocalizedString[]</a></code>
+
+                                        </td>
+                                    </tr>
+
+
+
+
+
+                        </tbody>
+                    </table>
+                    <table class="table table-sm table-bordered">
+                        <tbody>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <a name="named"></a>
+                                        <span class="name "><b>named</b>
+                                            <a href="#named">
+                                                <span class="icon ion-ios-link"></span>
+                                            </a>
+                                        </span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="col-md-4">
+                                        <code>named:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+</code>
+                                    </td>
+                                </tr>
+
+
+                                    <tr>
+                                        <td class="col-md-4">
+                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                                         </td>
                                     </tr>
@@ -1074,6 +1113,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
