--- a/interfaces/ExplorerTabSize.html
+++ b/interfaces/ExplorerTabSize.html
@@ -294,6 +294,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
