--- a/interfaces/SectionDialogConfig.html
+++ b/interfaces/SectionDialogConfig.html
@@ -345,6 +345,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
