--- a/interfaces/SectionFilterDialogConfig.html
+++ b/interfaces/SectionFilterDialogConfig.html
@@ -333,6 +333,7 @@ export interface ExplorerColumn {
   primary: boolean;
   unique: boolean;
   multiple: boolean;
+  named: boolean;
   referencedTableName: string;
   referencedEntityName: string;
   sectionPriority: number;
