--- a/miscellaneous/functions.html
+++ b/miscellaneous/functions.html
@@ -1511,7 +1511,7 @@ Each renderer is defined with a unique code and a dynamic import for the corresp
 
                                             <td>
                                                     <ul>
-<li>loaders for custom renderers</li>
+<li>loaders for custom renderers, will be merged with default renderers</li>
 </ul>
 
                                             </td>
@@ -1581,7 +1581,7 @@ Each renderer is defined with a unique code and a dynamic import for the corresp
 
                                             <td>
                                                     <ul>
-<li>loaders for custom renderers</li>
+<li>loaders for custom renderers, will be merged with default renderers</li>
 </ul>
 
                                             </td>
@@ -1651,7 +1651,7 @@ Each renderer is defined with a unique code and a dynamic import for the corresp
 
                                             <td>
                                                     <ul>
-<li>loaders for custom renderers</li>
+<li>loaders for custom renderers, will be merged with default renderers</li>
 </ul>
 
                                             </td>
