--- a/classes/AbstractExplorerActionRenderer.html
+++ b/classes/AbstractExplorerActionRenderer.html
@@ -230,7 +230,7 @@ including the target data, action data, and form management.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                        <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                     </td>
                 </tr>
@@ -334,11 +334,11 @@ import {InputSignal} from &quot;@angular/core&quot;;
  * This class provides common properties for action renderers,
  * including the target data, action data, and form management.
  */
-export abstract class AbstractExplorerActionRenderer&lt;Data &#x3D; unknown&gt; implements ExplorerActionRenderer&lt;Data&gt; {
+export abstract class AbstractExplorerActionRenderer implements ExplorerActionRenderer {
   /** The target data associated with the actions. */
   target: InputSignal&lt;TargetData&gt;;
   /** The data for the actions to be rendered. */
-  data: InputSignal&lt;Data | Data[]&gt;;
+  data: InputSignal&lt;unknown | unknown[]&gt;;
   /** The form group managing the entity data associated with the actions. */
   entityForm: InputSignal&lt;FormGroup&gt;;
   /** The action-data to be rendered. */
