--- a/classes/AbstractExplorerObjectRenderer.html
+++ b/classes/AbstractExplorerObjectRenderer.html
@@ -283,7 +283,7 @@ based on the specified column definition.</p>
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>    <code>FormGroup</code>
+                        <i>Type : </i>    <code>FormGroup&lt;FormControl&lt;&gt;&gt;</code>
 
                     </td>
                 </tr>
@@ -295,7 +295,7 @@ based on the specified column definition.</p>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>The form group associated with the entity.</p>
+                    <div class="io-description"><p>The form group associated with the entity data.</p>
 </div>
                 </td>
             </tr>
@@ -394,7 +394,7 @@ based on the specified column definition.</p>
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-object-renderer.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-object-renderer.ts:48</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -425,7 +425,7 @@ based on the specified column definition.</p>
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-object-renderer.ts:54</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/explorer/src/renderer/default/abstract-explorer-object-renderer.ts:57</a></div>
                                 </td>
                             </tr>
                     <tr>
@@ -466,8 +466,10 @@ implements ExplorerRenderer&lt;Data, Params&gt; {
   data: Data;
   /** The entity data associated with this object. */
   target: TargetData;
-  /** The form group associated with the entity. */
-  entityForm: FormGroup;
+  /** The form group associated with the entity data. */
+  entityForm: FormGroup&lt;{
+    [K in keyof Data]: FormControl&lt;Data[K]&gt;;
+  }&gt;;
 
 
   /**
@@ -475,6 +477,7 @@ implements ExplorerRenderer&lt;Data, Params&gt; {
    * @returns The form control for the column property.
    */
   get ctrl() {
+    // @ts-ignore
     return this.entityForm.controls[this.column.property] as FormControl;
   }
 
