--- a/interfaces/ExplorerActionRenderer.html
+++ b/interfaces/ExplorerActionRenderer.html
@@ -231,7 +231,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>data:     <code>InputSignal&lt;Data | []&gt;</code>
+                                        <code>data:     <code>InputSignal&lt; | []&gt;</code>
 </code>
                                     </td>
                                 </tr>
@@ -239,7 +239,7 @@
 
                                     <tr>
                                         <td class="col-md-4">
-                                            <i>Type : </i>    <code>InputSignal&lt;Data | []&gt;</code>
+                                            <i>Type : </i>    <code>InputSignal&lt; | []&gt;</code>
 
                                         </td>
                                     </tr>
@@ -521,10 +521,10 @@ export interface ExplorerRendererProvider extends ValueProvider {
 /**
  * Represents an action renderer in the explorer.
  */
-export interface ExplorerActionRenderer&lt;Data &#x3D; unknown&gt; {
+export interface ExplorerActionRenderer {
   target: InputSignal&lt;TargetData&gt;;
   action: ExplorerAction;
-  data?: InputSignal&lt;Data | Data[]&gt;;
+  data?: InputSignal&lt;unknown | unknown[]&gt;;
   entityForm?: InputSignal&lt;FormGroup&gt;;
 }
 
