deploy: 499ea318799ea289ce38d3bb6cb37ee13c3896fc

--- a/properties.html
+++ b/properties.html
@@ -102,7 +102,13 @@
     </ol>
     <ul class="properties-list">
         <li>
-            <b>Description</b> : todo description</li>
+            <b>Description</b> : Client application, which is an administrative panel for managing a platform-based system @k-platform</li>
+        <li>
+            <b>Keywords</b> : admin panel, platform management, customizable application, extensible application, angular, frontend, admin interface, system administration, admin UI</li>
+        <li>
+            <b>License</b> : Apache-2.0</li>
+        <li>
+            <b>Repository</b> : https://github.com/alexander-kiriliuk/k-platform-client</li>
         <li>
             <b>Author</b> : Alexander Kiriliuk</li>
     </ul>
